--- a/index.html
+++ b/index.html
@@ -58,6 +58,101 @@ vision and challenges in New Bangladesh.</h2>
                 </div>
             </div>
         </section>
+        <section class="future">
+            <div class="future-container">
+                <h2>The Vision of Future</h2>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+                <div class="future-card">
+                    <div class="card card-1">
+                        <img src="assets/card-icon.png" alt="">
+                        <h3>Digital Transformation</h3>
+                        <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                        <button class="btn">Learn More</button>
+                    </div>
+                    <div class="card card-2">
+                        <img src="assets/card-icon.png" alt="">
+                        <h3>Green Energy</h3>
+                        <p>Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                        <button class="btn">Learn More</button>
+                    </div>
+                    <div class="card card-3">
+                        <img src="assets/card-icon.png" alt="">
+                        <h3>Modern Infrastructure</h3>
+                        <p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                        <button class="btn">Learn More</button>
+                    </div>
+                </div>
+                <div class="yunus">
+                    <p>
+                        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"    
+                    </p>
+                    <h2>
+                        Dr. Muhammad Yunus
+                    </h2>
+                    <p class="p2">Chief Adviser of the People's Republic of Bangladesh</p>
+                </div>
+            </div>
+        </section>
+        <section class="opinion">
+            <div class="opinion-container">
+                <h2></h2>
+                <div>
+
+                </div>
+            </div>
+        </section>
+        <section class="news">
+            <div class="news-container">
+                <h2>Recent News</h2>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+                <div class="news-info">
+                    <div class="img"><img src="assets/satelite.png" alt=""></div>
+                    <div class="news-details">
+                        <h2>
+                            Bangladesh Launches New Satellite
+                        </h2>
+                        <div>
+                            <img class="al" src="assets/al-jazeera.png" alt="">
+                        </div>
+                        <p class="date"><span>Date: 05/01/2025</span>   <span>Time: 10.25 PM</span></p>
+                        <p class="para">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button class="btn">Read More</button>
+                    </div>
+                </div>
+                <div class="news-info">
+                    <div class="news-details">
+                        <h2>
+                            Bangladesh Launches New Satellite
+                        </h2>
+                        <div>
+                            <img class="al" src="assets/al-jazeera.png" alt="">
+                        </div>
+                        <p class="date"><span>Date: 05/01/2025</span>   <span>Time: 10.25 PM</span></p>
+                        <p class="para">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button class="btn">Read More</button>
+                    </div>
+                    <div class="img"><img src="assets/satelite.png">
+                    </div>
+                </div>
+                <div class="news-info">
+                    <div class="img"><img src="assets/satelite.png" alt=""></div>
+                    <div class="news-details">
+                        <h2>
+                            Bangladesh Launches New Satellite
+                        </h2>
+                        <div>
+                            <img class="al" src="assets/al-jazeera.png" alt="">
+                        </div>
+                        <p class="date"><span>Date: 05/01/2025</span>   <span>Time: 10.25 PM</span></p>
+                        <p class="para">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button class="btn">Read More</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
