--- a/index.html
+++ b/index.html
@@ -153,10 +153,43 @@ with a certain degree of justification, be able to speak of humankind as civiliz
                 </div>
             </div>
         </section>
+        <section class="donate">
+            <div class="donate-container">
+                <h2>Donate Today</h2>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+                <div class="tk">
+                    <div><h3>100 Taka</h3></div>
+                    <div><h3 class="taka"> 200 Taka</h3></div>
+                    <div><h3>500 Taka</h3></div>
+                    <div><h3>1000 Taka</h3></div>
+                </div>
+                <p class="other">Other Amount (Taka)</p>
+                <button class="btn">Done Now</button>
+            </div>
+        </section>
+        <section class="subscribe">
+            <div class="subscribe-container">
+                <h2>Subscribe Newsletter</h2>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+                <div class="mail">
+                    <input class="email" type="email" placeholder="Enter your email here">
+                    <input class="btn" type="submit" value="Subscribe">
+                </div>
+                <p>We promise not to spam you!</p>
+            </div>
+        </section>
     </main>
 
     <footer>
-
+        <div class="footer-container">
+            <h2>Bangladesh 2.0</h2>
+            <hr>
+            <div>
+                <img src="assets/facebook.png" alt="">
+                <img src="assets/instagram.png" alt="">
+                <img src="assets/x.png" alt="">
+            </div>
+        </div>
     </footer>
 </body>
 </html>
